--- a/index.html
+++ b/index.html
@@ -28,104 +28,105 @@
     <div class="scheduleContainer">
         <!--the time blocks (to see the css that was added via html check out 05-Third-Party-APIs/ 02-Challenge/ lines 43-47 in the html)-->
 
-
+    <h2 class="scheduleHeader">Daily</h2>
+    <h2>Planner</h2>
     
+      
+        <div id="hour-08" class="row time-block"> <!--removed past present and future from this class. add it by creating a variable for this div then use if/else statments with.addClass to add them in. see me for example code if needed.-->
+          <div>8AM</div>
+          <textarea id="eight" class="description" rows="3"></textarea>
+          <button class="saveButton"  aria-label="regular">
+            <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i><!--this is the icon used in the save button-->
+          </button>
+        </div>
 
-    <div id="hour-08" class="row time-block"> <!--removed past present and future from this class. add it by creating a variable for this div then use if/else statments with.addClass to add them in. see me for example code if needed.-->
-      <div>8AM</div>
-      <textarea id="eight" class="description" rows="3"></textarea>
-      <button class="saveButton"  aria-label="regular">
-        <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i><!--this is the icon used in the save button-->
-      </button>
-    </div>
+        <div id="hour-09" class="row time-block">
+          <div>9AM</div>
+          <textarea id="nine" class="description" rows="3"></textarea>
+          <button class="saveButton"  aria-label="regular">
+            <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
+          </button>
+        </div>
 
-    <div id="hour-09" class="row time-block">
-      <div>9AM</div>
-      <textarea id="nine" class="description" rows="3"></textarea>
-      <button class="saveButton"  aria-label="regular">
-        <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
-      </button>
-    </div>
+        <div id="hour-10" class="row time-block">
+          <div>10AM</div>
+          <textarea id="ten" class="description" rows="3"></textarea>
+          <button class="saveButton"  aria-label="regular">
+            <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
+          </button>
+        </div>
 
-    <div id="hour-10" class="row time-block">
-      <div>10AM</div>
-      <textarea id="ten" class="description" rows="3"></textarea>
-      <button class="saveButton"  aria-label="regular">
-        <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
-      </button>
-    </div>
+        <div id="hour-11" class="row time-block">
+          <div>11AM</div>
+          <textarea id="eleven" class="description" rows="3"></textarea>
+          <button class="saveButton"  aria-label="regular">
+            <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
+          </button>
+        </div>
 
-    <div id="hour-11" class="row time-block">
-      <div>11AM</div>
-      <textarea id="eleven" class="description" rows="3"></textarea>
-      <button class="saveButton"  aria-label="regular">
-        <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
-      </button>
-    </div>
+        <div id="hour-12" class="row time-block">
+          <div>12pm</div>
+          <textarea id="twelve" class="description" rows="3"></textarea>
+          <button class="saveButton"  aria-label="regular">
+            <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
+          </button>
+        </div>
 
-    <div id="hour-12" class="row time-block">
-      <div>12pm</div>
-      <textarea id="twelve" class="description" rows="3"></textarea>
-      <button class="saveButton"  aria-label="regular">
-        <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
-      </button>
-    </div>
+        <div id="hour-13" class="row time-block">
+          <div>1pm</div>
+          <textarea id="one" class="description" rows="3"></textarea>
+          <button class="saveButton"  aria-label="regular">
+            <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
+          </button>
+        </div>
 
-    <div id="hour-13" class="row time-block">
-      <div>1pm</div>
-      <textarea id="one" class="description" rows="3"></textarea>
-      <button class="saveButton"  aria-label="regular">
-        <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
-      </button>
-    </div>
+        <div id="hour-14" class="row time-block">
+          <div>2pm</div>
+          <textarea id="two" class="description" rows="3"></textarea>
+          <button class="saveButton"  aria-label="regular">
+            <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
+          </button>
+        </div>
 
-    <div id="hour-14" class="row time-block">
-      <div>2pm</div>
-      <textarea id="two" class="description" rows="3"></textarea>
-      <button class="saveButton"  aria-label="regular">
-        <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
-      </button>
-    </div>
+        <div id="hour-15" class="row time-block">
+          <div>3pm</div>
+          <textarea id="three" class="description" rows="3"></textarea>
+          <button class="saveButton"  aria-label="regular">
+            <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
+          </button>
+        </div>
 
-    <div id="hour-15" class="row time-block">
-      <div>3pm</div>
-      <textarea id="three" class="description" rows="3"></textarea>
-      <button class="saveButton"  aria-label="regular">
-        <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
-      </button>
-    </div>
+        <div id="hour-16" class="row time-block">
+          <div>4pm</div>
+          <textarea id="four" class="description" rows="3"></textarea>
+          <button class="saveButton"  aria-label="regular">
+            <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
+          </button>
+        </div>
 
-    <div id="hour-16" class="row time-block">
-      <div>4pm</div>
-      <textarea id="four" class="description" rows="3"></textarea>
-      <button class="saveButton"  aria-label="regular">
-        <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
-      </button>
-    </div>
+        <div id="hour-17" class="row time-block">
+          <div>5pm</div>
+          <textarea id="five" class="description" rows="3"></textarea>
+          <button class="saveButton"  aria-label="regular">
+            <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
+          </button>
+        </div>
 
-    <div id="hour-17" class="row time-block">
-      <div>5pm</div>
-      <textarea id="five" class="description" rows="3"></textarea>
-      <button class="saveButton"  aria-label="regular">
-        <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
-      </button>
-    </div>
+        <div id="hour-18" class="row time-block">
+          <div>6pm</div>
+          <textarea id="six" class="description" rows="3"></textarea>
+          <button class="saveButton"  aria-label="regular">
+            <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
+          </button>
+        </div>
 
-    <div id="hour-18" class="row time-block">
-      <div>6pm</div>
-      <textarea id="six" class="description" rows="3"></textarea>
-      <button class="saveButton"  aria-label="regular">
-        <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
-      </button>
-    </div>
-
-    <div id="hour-19" class="row time-block">
-      <div>7pm</div>
-      <textarea id="seven" class="description" rows="3"></textarea>
-      <button class="saveButton"  aria-label="regular">
-        <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
-      </button>
-    </div>
+        <div id="hour-19" class="row time-block">
+          <div>7pm</div>
+          <textarea id="seven" class="description" rows="3"></textarea>
+          <button class="saveButton"  aria-label="regular">
+            <i class="fa-regular fa-hard-drive" aria-hidden="true" style="color: #0a1e5c;"></i>
+          </button>
+        </div>
     <div>
       <button id="clearButton" onclick="clearLocalStorage()">Clear</button>
     </div>
